add max distance query for nearest restaurant
